<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:key="openai_api_key"
        android:title="@string/pref_api_key_title"
        android:summary="@string/pref_api_key_summary" />

    <ListPreference
        android:key="typewriter_speed"
        android:title="会話スピード"
        android:entries="@array/speed_labels"
        android:entryValues="@array/speed_values"
        android:defaultValue="60"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:key="interval_choice"
        android:title="@string/pref_interval_title"
        android:summary="@string/pref_interval_summary"
        android:entries="@array/interval_labels"
        android:entryValues="@array/interval_values"
        android:defaultValue="300000"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
